Fix bug (navbar/cart div covers product grid and prevents clicking patterns)

--- a/src/components/styles.scss
+++ b/src/components/styles.scss
@@ -1,11 +1,13 @@
 @import url('https://fonts.googleapis.com/css2?family=Source+Sans+Pro:wght@400;700;900&display=swap');
 
 #cartMenu {
-  border-bottom: 0 none !important;
+  border-bottom: 0 !important;
+  background: none;
+  border: none;
   box-shadow: none;
 }
 
-#strokedP {
+#productPriceText {
     -webkit-text-stroke: 0.1rem black;
     font-size: 2rem;
     font-family: Source Sans Pro, sans-serif;
